STYLE: Add an aesthetic utility class for headers in aside containers. Add a rule to fix contrast issues on dark mode

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,18 +133,20 @@ body {
 
 .logo {
     max-width: 250px;
-  }
+    color: inherit;
+    text-decoration: none;
+}
 
 h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  figure {
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+figure {
     margin: 0;
-  }
+}
 
 img {
     max-width: 100%;
@@ -161,7 +163,7 @@ nav ul {
     gap: max(5vw, 1rem);
 }
   
-nav a {
+:is(nav, ul, ol) a {
     color: inherit;
     text-decoration: none;
 }
@@ -182,9 +184,20 @@ nav a:focus {
 
 .call-to-action {
     padding: 1rem;
-    background: var(--color-neutral-50);
-    /* Note that it's contrast has to work in both light and dark color schemes */
-  }
+    background: var(--color-neutral-80);
+}
+
+@media (prefers-color-scheme: dark) {
+    .call-to-action {
+      background-color: var(--color-neutral-30);
+    }
+}
+/* This fixes the contrast issue when a dark color-scheme is applied.
+    
+• References: 
+    https://developer.mozilla.org/en-US/docs/Web/CSS/color-scheme#styling_based_on_color_schemes
+    
+*/
 
 .site-title {
     font-size: var(--fs-900);
@@ -195,6 +208,12 @@ nav a:focus {
 .section-title {
     font-size: var(--fs-800);
     line-height: 1.1;
+}
+
+.toc-title,
+.aside-title {
+    font-size: var(--fs-400);
+    line-height: 2;
 }
 
 
